Result extracted from parsing process.

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 					<arguments>
 						<argument>-J</argument>
 						<argument>-Jpackage=logiceval</argument>
+						<argument>-Jnorun</argument>
 						<argument>logic.y</argument>
 					</arguments>
 				</configuration>
